feat: add Knn algorithm

--- a/KNN/algorithm.ipynb
+++ b/KNN/algorithm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['url', 'length_url', 'length_hostname', 'ip', 'nb_dots', 'nb_hyphens', 'nb_at', 'nb_qm', 'nb_and', 'nb_or', 'nb_eq', 'nb_underscore', 'nb_tilde', 'nb_percent', 'nb_slash', 'nb_star', 'nb_colon', 'nb_comma', 'nb_semicolumn', 'nb_dollar', 'nb_space', 'nb_www', 'nb_com', 'nb_dslash', 'http_in_path', 'https_token', 'ratio_digits_url', 'ratio_digits_host', 'punycode', 'port', 'tld_in_path', 'tld_in_subdomain', 'abnormal_subdomain', 'nb_subdomains', 'prefix_suffix', 'random_domain', 'shortening_service', 'path_extension', 'nb_redirection', 'nb_external_redirection', 'length_words_raw', 'char_repeat', 'shortest_words_raw', 'shortest_word_host', 'shortest_word_path', 'longest_words_raw', 'longest_word_host', 'longest_word_path', 'avg_words_raw', 'avg_word_host', 'avg_word_path', 'phish_hints', 'domain_in_brand', 'brand_in_subdomain', 'brand_in_path', 'suspecious_tld', 'statistical_report', 'nb_hyperlinks', 'ratio_intHyperlinks', 'ratio_extHyperlinks', 'ratio_nullHyperlinks', 'nb_extCSS', 'ratio_intRedirection', 'ratio_extRedirection', 'ratio_intErrors', 'ratio_extErrors', 'login_form', 'external_favicon', 'links_in_tags', 'submit_email', 'ratio_intMedia', 'ratio_extMedia', 'sfh', 'iframe', 'popup_window', 'safe_anchor', 'onmouseover', 'right_clic', 'empty_title', 'domain_in_title', 'domain_with_copyright', 'whois_registered_domain', 'domain_registration_length', 'domain_age', 'web_traffic', 'dns_record', 'google_index', 'page_rank', 'status']\n",
+      "- - - - - - - BALANCEO - - - - - - -\n",
+      "status\n",
+      "legitimate    5715\n",
+      "phishing      5715\n",
+      "Name: count, dtype: int64\n",
+      "- - - - - - - TIPOS DE DATOS - - - - - - -\n",
+      "int64      74\n",
+      "float64    13\n",
+      "object      2\n",
+      "Name: count, dtype: int64\n",
+      "- - - - - - - VALORES NULLS - - - - - - -\n",
+      "         url  length_url  length_hostname     ip  nb_dots  nb_hyphens  nb_at  \\\n",
+      "0      False       False            False  False    False       False  False   \n",
+      "1      False       False            False  False    False       False  False   \n",
+      "2      False       False            False  False    False       False  False   \n",
+      "3      False       False            False  False    False       False  False   \n",
+      "4      False       False            False  False    False       False  False   \n",
+      "...      ...         ...              ...    ...      ...         ...    ...   \n",
+      "11425  False       False            False  False    False       False  False   \n",
+      "11426  False       False            False  False    False       False  False   \n",
+      "11427  False       False            False  False    False       False  False   \n",
+      "11428  False       False            False  False    False       False  False   \n",
+      "11429  False       False            False  False    False       False  False   \n",
+      "\n",
+      "       nb_qm  nb_and  nb_or  ...  domain_in_title  domain_with_copyright  \\\n",
+      "0      False   False  False  ...            False                  False   \n",
+      "1      False   False  False  ...            False                  False   \n",
+      "2      False   False  False  ...            False                  False   \n",
+      "3      False   False  False  ...            False                  False   \n",
+      "4      False   False  False  ...            False                  False   \n",
+      "...      ...     ...    ...  ...              ...                    ...   \n",
+      "11425  False   False  False  ...            False                  False   \n",
+      "11426  False   False  False  ...            False                  False   \n",
+      "11427  False   False  False  ...            False                  False   \n",
+      "11428  False   False  False  ...            False                  False   \n",
+      "11429  False   False  False  ...            False                  False   \n",
+      "\n",
+      "       whois_registered_domain  domain_registration_length  domain_age  \\\n",
+      "0                        False                       False       False   \n",
+      "1                        False                       False       False   \n",
+      "2                        False                       False       False   \n",
+      "3                        False                       False       False   \n",
+      "4                        False                       False       False   \n",
+      "...                        ...                         ...         ...   \n",
+      "11425                    False                       False       False   \n",
+      "11426                    False                       False       False   \n",
+      "11427                    False                       False       False   \n",
+      "11428                    False                       False       False   \n",
+      "11429                    False                       False       False   \n",
+      "\n",
+      "       web_traffic  dns_record  google_index  page_rank  status  \n",
+      "0            False       False         False      False   False  \n",
+      "1            False       False         False      False   False  \n",
+      "2            False       False         False      False   False  \n",
+      "3            False       False         False      False   False  \n",
+      "4            False       False         False      False   False  \n",
+      "...            ...         ...           ...        ...     ...  \n",
+      "11425        False       False         False      False   False  \n",
+      "11426        False       False         False      False   False  \n",
+      "11427        False       False         False      False   False  \n",
+      "11428        False       False         False      False   False  \n",
+      "11429        False       False         False      False   False  \n",
+      "\n",
+      "[11430 rows x 89 columns]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Exploracion de datos\n",
     "# Para saber las columnas del dataset\n",
     "print(list(df.columns))\n",
     "\n",
     "# Para saber si el dataset esta balanceado\n",
+    "print(\"- - - - - - - BALANCEO - - - - - - -\")\n",
     "print(df[\"status\"].value_counts())\n",
     "\n",
+    "# Obtener tipos de datos\n",
+    "tipos_de_datos = df.dtypes.value_counts()\n",
+    "\n",
+    "# Mostrar tipos de datos con nombres de columnas\n",
+    "print(\"- - - - - - - TIPOS DE DATOS - - - - - - -\")\n",
+    "print(tipos_de_datos)\n",
     "\n",
     "# Buscando valores nulls\n",
+    "print(\"- - - - - - - VALORES NULLS - - - - - - -\")\n",
     "nulos = df.isnull()\n",
     "print(nulos)\n",
     "\n",
+    "nulos_por_columna = df.isnull().sum()\n",
+    "print(list(nulos_por_columna))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['length_url', 'length_hostname', 'ip', 'nb_dots', 'nb_hyphens', 'nb_at', 'nb_qm', 'nb_and', 'nb_or', 'nb_eq', 'nb_underscore', 'nb_tilde', 'nb_percent', 'nb_slash', 'nb_star', 'nb_colon', 'nb_comma', 'nb_semicolumn', 'nb_dollar', 'nb_space', 'nb_www', 'nb_com', 'nb_dslash', 'http_in_path', 'https_token', 'ratio_digits_url', 'ratio_digits_host', 'punycode', 'port', 'tld_in_path', 'tld_in_subdomain', 'abnormal_subdomain', 'nb_subdomains', 'prefix_suffix', 'random_domain', 'shortening_service', 'path_extension', 'nb_redirection', 'nb_external_redirection', 'length_words_raw', 'char_repeat', 'shortest_words_raw', 'shortest_word_host', 'shortest_word_path', 'longest_words_raw', 'longest_word_host', 'longest_word_path', 'avg_words_raw', 'avg_word_host', 'avg_word_path', 'phish_hints', 'domain_in_brand', 'brand_in_subdomain', 'brand_in_path', 'suspecious_tld', 'statistical_report', 'nb_hyperlinks', 'ratio_intHyperlinks', 'ratio_extHyperlinks', 'ratio_nullHyperlinks', 'nb_extCSS', 'ratio_intRedirection', 'ratio_extRedirection', 'ratio_intErrors', 'ratio_extErrors', 'login_form', 'external_favicon', 'links_in_tags', 'submit_email', 'ratio_intMedia', 'ratio_extMedia', 'sfh', 'iframe', 'popup_window', 'safe_anchor', 'onmouseover', 'right_clic', 'empty_title', 'domain_in_title', 'domain_with_copyright', 'whois_registered_domain', 'domain_registration_length', 'domain_age', 'web_traffic', 'dns_record', 'google_index', 'page_rank', 'status']\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convirtiendo Columna status a numerica\n",
+    "df[\"status\"] = df[\"status\"].map({\"phishing\": 1, \"legitimate\": 0})\n",
+    "\n",
+    "\n",
+    "# Columna innecesaria porque ya se tiene su longitud\n",
+    "dfProcessed = df.drop('url', axis=1)\n",
+    "\n",
+    "print(list(dfProcessed.columns))\n",
     "nulos_por_columna = df.isnull().sum()\n",
     "print(list(nulos_por_columna))\n"
    ]
@@ -42,18 +150,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convirtiendo Columna status a numerica\n",
-    "df[\"status\"] = df[\"status\"].map({\"phishing\": 1, \"legitimate\": 0})"
+    "\n",
+    "# Este codigo lo dejo aqui porque fue el primer intento del KNN y se tardo demadiado, lo decidi optimizar\n",
+    "# def euclidean(x, y):\n",
+    "#     return np.sqrt(np.sum((x - y) ** 2))\n",
+    "\n",
+    "# def Knn(x_train, y_train, x_test, k):\n",
+    "#     y_pred = []\n",
+    "#     for i in range(x_test.shape[0]):\n",
+    "#         distances = []\n",
+    "#         for j in range(x_train.shape[0]):\n",
+    "#             distances.append(euclidean(x_test.iloc[i], x_train.iloc[j]))\n",
+    "#         distances = np.array(distances)\n",
+    "#         k_nearest = np.argsort(distances)[:k]\n",
+    "#         k_nearest_labels = y_train.iloc[k_nearest]\n",
+    "#         y_pred.append(k_nearest_labels.value_counts().idxmax())\n",
+    "#     return y_pred\n",
+    "\n",
+    "def Knn_optimized(x_train, y_train, x_test, k):\n",
+    "    y_pred = []\n",
+    "    x_train = x_train.to_numpy() \n",
+    "    x_test = x_test.to_numpy()\n",
+    "\n",
+    "    for x in x_test:\n",
+    "        # Calcular la distancia euclidiana\n",
+    "        distances = np.sqrt(((x_train - x) ** 2).sum(axis=1))\n",
+    "\n",
+    "        k_nearest = np.argpartition(distances, k)[:k]\n",
+    "        k_nearest_labels = y_train.iloc[k_nearest]\n",
+    "        y_pred.append(k_nearest_labels.value_counts().idxmax())\n",
+    "    \n",
+    "    return y_pred\n",
+    "\n",
+    "# Seleccionar 80% de los datos para entrenamiento\n",
+    "train = dfProcessed.sample(frac=0.8, random_state=42)\n",
+    "\n",
+    "# # Usar el resto (20%) para prueba\n",
+    "test = dfProcessed.drop(train.index)\n",
+    "\n",
+    "# Train\n",
+    "train_y = train.pop('status')\n",
+    "train_x = train\n",
+    "\n",
+    "# Test\n",
+    "test_y = test.pop('status')\n",
+    "test_x = test\n",
+    "\n",
+    "y_pred = Knn_optimized(train_x, train_y, test_x, 3)\n",
+    "# print(res)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy (Exactitud): 0.8429571303587051\n",
+      "Precision (Precisión): 0.8177257525083612\n",
+      "Recall (Sensibilidad): 0.8739946380697051\n"
+     ]
+    }
+   ],
    "source": [
-    "def euclidean(x, y):\n",
-    "    return np.sqrt(np.sum((x - y) ** 2))"
+    "\n",
+    "df_results = pd.DataFrame({'Real': test_y, 'Predicho': y_pred})\n",
+    "\n",
+    "y_pred = np.array(y_pred)\n",
+    "\n",
+    "TP = np.sum((test_y == 1) & (y_pred == 1))\n",
+    "TN = np.sum((test_y == 0) & (y_pred == 0))\n",
+    "FP = np.sum((test_y == 0) & (y_pred == 1))\n",
+    "FN = np.sum((test_y == 1) & (y_pred == 0))\n",
+    "\n",
+    "# Métricas\n",
+    "accuracy = (TP + TN) / len(test_y) if len(test_y) > 0 else 0\n",
+    "precision = TP / (TP + FP) if (TP + FP) > 0 else 0\n",
+    "recall = TP / (TP + FN) if (TP + FN) > 0 else 0\n",
+    "\n",
+    "print(\"Accuracy (Exactitud):\", accuracy)\n",
+    "print(\"Precision (Precisión):\", precision)\n",
+    "print(\"Recall (Sensibilidad):\", recall)"
    ]
   }
  ],
