chore: clean code knn

--- a/KNN/algorithm.ipynb
+++ b/KNN/algorithm.ipynb
@@ -295,20 +295,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "# Separar características y etiquetas\n",
     "y = dfProcessed.pop(\"status\") \n",
-    "X = dfProcessed  # Características\n",
+    "X = dfProcessed\n",
     "\n",
-    "# Dividir los datos en entrenamiento y prueba (80%-20%)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Crear el modelo KNN con k=3\n",
+    "\n",
     "knn = KNeighborsClassifier(n_neighbors=3)\n",
     "\n",
-    "# Entrenar el modelo\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
-    "# Hacer predicciones\n",
     "y_pred = knn.predict(X_test)\n",
     "\n",
     "# Calcular métricas\n",
