--- a/rlogistica/rl2.ipynb
+++ b/rlogistica/rl2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -362,17 +362,17 @@
      "text": [
       "metricas de desempeño:\n",
       "Precision: 0.9631236442516269\n",
-      "accuracy:  0.8797025371828522\n",
-      "recall:  0.7865367581930912\n",
+      "accuracy (Exactitud)::  0.8797025371828522\n",
+      "recall (Sensibilidad):  0.7865367581930912\n",
       "f1 score:  0.8659190638712823\n",
+      "el valor de f1 al ser cercano a 1 indica un buen equilibrio entre la presicion y el recall, entonces el modelo tiene un buen rendimiento en estas metricas\n",
       "Confusion Matrix:\n",
-      "[[1123   34]\n",
+      " [[1123   34]\n",
       " [ 241  888]]\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "#metricas de desempeño\n",
     "# Calcular la precisión del modelo\n",
     "print(\"metricas de desempeño:\")\n",
@@ -381,20 +381,21 @@
     "print(\"Precision:\", precision)\n",
     "\n",
     "accuracy = accuracy_score(y_test, predicciones)\n",
-    "print('accuracy: ', accuracy)\n",
+    "print('accuracy (Exactitud):: ', accuracy)\n",
     "recall= recall_score(y_test, predicciones)\n",
-    "print('recall: ', recall)\n",
+    "print('recall (Sensibilidad): ', recall)\n",
     "\n",
     "f1= f1_score(y_test, predicciones)\n",
     "print('f1 score: ', f1)\n",
+    "print('el valor de f1 al ser cercano a 1 indica un buen equilibrio entre la presicion y el recall, entonces el modelo tiene un buen rendimiento en estas metricas')\n",
     "\n",
     "matriz_de_confusion= confusion_matrix(y_test, predicciones)\n",
-    "print(f\"Confusion Matrix:\\n{matriz_de_confusion}\")"
+    "print(f\"Confusion Matrix:\\n {matriz_de_confusion}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
